--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,31 @@
-.vs/
-obj/
+# Build results
 bin/
+obj/
+*.dll
+*.pdb
+*.exe
+
+# Visual Studio
+.vs/
 *.user
+*.suo
+
+# Rider
+.idea/
+
+# VS Code
+.vscode/
+
+# Mac
+.DS_Store
+
+# Build artifacts
+*.zip
+*.deps.json
+
+# Temporary files
+*.tmp
+*.log
+
+# JS Followers
+JSFollowers/
